user_practice.txt
# Paste your interactive Python practice sesssion here
# See course site for details.
#
# Windows                 Mac
# CTRL A = select all = Command A
# CTRL C = copy =       Command C
# CTRL V = paste =      Command V

# It'll look something like this only longer:

Python 3.10.5 (main, Jul 22 2022, 17:09:35) [GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 2+2
4
>>> print("hello")
hello
>>> a = 5
>>> b = 3
>>> print( min (a, b))
3
>>> Last login: Fri Jan 13 18:03:44 on ttys000
(base) macbeth@beths-air ~ % python
Python 3.9.12 (main, Apr  5 2022, 01:53:17) 
[Clang 12.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 45 + 72
117
>>> x = 7
>>> y = 3
>>> x + y
10
>>> total = x + y
>>> total
10
>>> type(x)
<class 'int'>
>>> type(10.5)
<class 'float'>
>>> #Section 2.3
>>> 7 * 4
28
>>> 2 ** 10
1024
>>> 9 ** (1 / 2)
3.0
>>> 7 / 4
1.75
>>> 7 // 4
1
>>> 3 // 5
0
>>> 14 // 7
2
>>> -13 / 4
-3.25
>>> -13 // 4
-4
>>> 123 / 0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero
>>> z + 7
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'z' is not defined
>>> 17 % 5
2
>>> 7.5 % 3.5
0.5
>>> 10 * (5 + 3)
80
>>> 10 * 5 + 3
53
>>> #Section 2.4
>>> print('Welcome to Python!')
Welcome to Python!
>>> print("Welcome to Python!')
  File "<stdin>", line 1
    print("Welcome to Python!')
                               ^
SyntaxError: EOL while scanning string literal
>>> #Mismatched quote types
>>> print("Welcome to Python!")
Welcome to Python!
>>> print('Welcome', 'to', 'Python!')
Welcome to Python!
>>> print('Welcome/nto/n/nPython!')
Welcome/nto/n/nPython!
>>> #Used forward slash instead of backslash
>>> print('Welcome\nto\n\nPython!')
Welcome
to

Python!
>>> print('this is a longer string, so we \
... split it over two lines')
this is a longer string, so we split it over two lines
>>> print('Sum is', 7 + 3)
Sum is 10
>>> #Section 2.5
>>> print('Display "hi" in quotes')
Display "hi" in quotes
>>> print('Display 'hi' in quotes')
  File "<stdin>", line 1
    print('Display 'hi' in quotes')
                    ^
SyntaxError: invalid syntax
>>> print('Display \'hi\' in quotes')
Display 'hi' in quotes
>>> print("Display the name O'Brien")
Display the name O'Brien
>>> print("Display \"hi\" in quotes")
Display "hi" in quotes
>>> print("""Display "hi" and 'bye' in quotes""")
Display "hi" and 'bye' in quotes
>>> triple_quoted_string = """This is a triple-quoted
... string that spans two lines"""
>>> print(triple_quoted_string)
This is a triple-quoted
string that spans two lines
>>> triple_quoted_string
'This is a triple-quoted\nstring that spans two lines'
>>> #Section 2.6
>>> name = input("What's your name? ")
What's your name? Beth
>>> name
'Beth'
>>> print(name)
Beth
>>> name = input("What's your name? ")
What's your name? 'Beth'
>>> name
"'Beth'"
>>> print(name)
'Beth'
>>> value1 = input('Enter first number: ')
Enter first number: 7
>>> value2 = input('Enter second number: ')
Enter second number: 3
>>> value1 + value2
'73'
>>> value = input('Enter an integer: ')
Enter an integer: 7
>>> value = int(value)
>>> value
7
>>> another_value = int(input('Enter another integer: '))
Enter another integer: 13
>>> another_value
13
>>> 
>>> value + another_value
20
>>> bad_value = int(input('Enter another integer: '))
Enter another integer: hello
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: 'hello'
>>> 
>>> int(10.5)
10
>>> 

